themes/custom/mat/sass/components/paragraphs/_paragraph--type--carousel.scss
// ========================================
//
// @file _paragraph--type--carousel.scss
// Paragraph carousel element
// ========================================

// Paragraph carousel
// -----------------------------------------------------------------------------
.paragraph--type--carousel {
  min-height: 62rem;
  padding-top: 8rem;
  position: relative;
  z-index: 1;
  @include gradient-blue(0deg);

  @media (min-width: $screen-sm-min) {
    padding-top: 12rem;
    @include gradient-blue();
  }

  // Slick styles
  .slick-arrow {
    width: 6.5rem;
    height: 6.5rem;
    position: absolute;
    top: 14.25rem;
    border-radius: 50%;
    line-height: 0;
    font-size: 0;
    cursor: pointer;
    background: transparent;
    color: transparent;
    border: none;
    outline: none;
    box-shadow: 0 8px 15px 0 rgba(0, 0, 0, 0.1);

    @media (max-width: $screen-xs-max) {
      
    }

    &:before {
      content: '';
      display: inline-block;
      width: 6.5rem;
      height: 6.5rem;
      position: absolute;
      top: 0;
      left: 0;
      border-radius: 50%;
      background-color: $brand-primary;
      @include icons('i-chevron-large');
      background-position: 2.5rem center;
    }

    @media (max-width: $screen-xs-max) {
      top: auto;
      bottom: -19rem;
    }
  }

  .slick-slide {
    width: 360px !important;
    padding: 2.5rem 3rem;

    @media (max-width: $screen-xs-max) {
      width: 315px !important;
      padding: 2.5rem .75rem;
    }
  }

  .slick-prev {
    left: -13rem;

    @media (max-width: $screen-xs-max) {
      left: 50%;
      margin-left: -8rem;
    }
    
    &:before {
      transform: rotate(180deg);
    }
  }

  .slick-next {
    right: -13rem;

    @media (max-width: $screen-xs-max) {
      right: 50%;
      margin-right: -8rem;
    }
  }

  .slick-track {
    @media (max-width: $screen-xs-max) {
      display: flex;
      padding-left: 9rem;
    }
  }

  .container-small {
    text-align: center;
  }

  h2 {
    color: $white;
  }

  h3 {
    color: $brand-primary;
  }

  .field--name-field-carousel-cta-button {
    margin-top: 2.8rem;

    a {
      @include btn-primary();

      @media (max-width: $screen-xs-max) {
        padding-right: 3.8rem;
        padding-left: 3.8rem;
      }
    }

    @media (max-width: $screen-xs-max) {
      margin-right: -2rem;
      margin-left: -2rem;
    }
  }

  .field--name-field-slide-items {
      height: 35rem;

      @media (max-width: $screen-xs-max) {
        //max-width: 1080px;
        margin-top: 6rem;
      }

      @media (min-width: $screen-sm-min) {
        position: absolute;
        left: 50%;
        bottom: -17.5rem;
        margin-left: -180px;
        max-width: 360px; // 1 slide
      }
      
      @media (min-width: 1024px) {
        max-width: 720px; // 2 slids
        margin-left: -360px;
      }

      @media (min-width: 1420px) {
        max-width: 1080px; // 3 slids
        margin-left: -540px;
      }

      @media (min-width: 1774px) {
        max-width: 1440px; // 4 slids
        margin-left: -720px;
      }

      @media (min-width: 2220px) {
        max-width: 1800px; // 5 slids
        margin-left: -900px;
      }
  }

  .carousel-item {
    display: block;

    .carousel-item--image {
      width: 30rem;
      height: 30rem;
      background-size: auto 28rem;
      background-position: center center;
      border-radius: 50%;
      border: 10px solid $white;
      box-shadow: 0 8px 15px 0 rgba(0, 0, 0, 0.1);
    }

    .carousel-item--summary {
      @media (min-width: $screen-sm-min) {
        display: none;
      }

      width: 30rem;
      margin-top: 1rem;
      padding: 0 2rem 2.5rem 2rem;
      position: relative;
      background-color: $white;
      border-radius: $border-radius-base;
      box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.1);
      text-align: center;

      &:before {
        content: "";
        width: 2rem;
        height: 2rem;
        margin-left: -1rem;
        position: absolute;
        top: -1rem;
        left: 50%;
        z-index: 1;
        transform: rotate(45deg);
        background-color: $white;
        box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.1);
      }

      &:after {
        content: "";
        width: 4.2rem;
        height: 4.2rem;
        position: absolute;
        left: 50%;
        bottom: -2.1rem;
        margin-left: -2.1rem;
        z-index: 3;
        @include icons('i-plus');
        border-radius: 50%;
        background-color: $brand-primary;
        background-position: 10px center;
      }

      span {
        display: block;
        padding-top: .8rem;
        position: relative;
        z-index: 2;
        @include font-size(2.4);
        line-height: 1.45;
        font-weight: 500;
        background-color: $white;
        color: $brand-primary;
      }

      .field--name-field-story-category {
        @include font-size(1.2);
        color: $gray-base;
        letter-spacing: .13em;
        text-transform: uppercase;
      }
    }

    &:hover {
      @media (min-width: $screen-sm-min) {
        margin-top: -2.5rem;
      }

      .carousel-item--summary {
        display: inline-block;
      }
    }
  }
}

